--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ body::before {
 .clase-item p,
 .dojang-card p {
     font-size: clamp(1rem, 2.5vw, 1.25rem);
-    color: var(--text-secondary);
+    color: var(--bg-general);
     margin-bottom: 1rem;
 }
 
@@ -457,6 +457,7 @@ footer i {
         /* Ajusta altura en pantallas pequeñas */
     }
 }
+
 /* ================================
      RESPONSIVE GENERAL
   ================================= */
@@ -490,5 +491,66 @@ footer i {
 
     #video-taekwondo iframe {
         height: 360px;
+    }
+}
+
+.section-fondo p {
+    color: var(--text-secondary);
+}
+
+.contenedor-clases p {
+    color: var(--text-secondary);
+    /* o directamente un gris como #6c757d */
+}
+
+a {
+    color: #fd7e14;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+a:hover {
+    color: blue;
+    text-decoration: underline;
+}
+
+.formulario-titulo {
+    color: white;
+}
+.perfil-instructor {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-top: 40px;
+    background-color: #f4f4f4;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
+}
+
+.foto-instructor {
+    max-width: 300px;
+    height: auto;
+    border-radius: 10px;
+    margin: 20px 0;
+}
+
+.perfil-instructor {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+    padding: 20px;
+}
+
+@media (min-width: 768px) {
+    .perfil-instructor {
+        flex-direction: row;
+        text-align: left;
+    }
+
+    .foto-instructor {
+        margin-right: 20px;
     }
 }
